[workspace]
resolver = "2"
members = [
    "buildpacks/release-phase",
    "common/release_commands"
]

[workspace.package]
rust-version = "1.76"
edition = "2021"

[workspace.lints.rust]
unreachable_pub = "warn"
unsafe_code = "warn"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
panic_in_result_fn = "warn"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
enum_variant_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
test_support = { path = "./test_support" }

[profile.release]
strip = true