[package]
name = "test_support"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
libcnb = { git = "https://github.com/heroku/libcnb.rs.git", branch = "support-docker-volume-mounts" }
libcnb-test = { git = "https://github.com/heroku/libcnb.rs.git", branch = "support-docker-volume-mounts" }
ureq = "2"
