[package]
name = "test_support"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
libcnb = { git = "https://github.com/mars/libcnb.rs.git", branch = "docker-volume" }
libcnb-test = { git = "https://github.com/mars/libcnb.rs.git", branch = "docker-volume" }
ureq = "2"
