[package]
name = "release_artifacts"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
aws-config = { version = "1.5.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.52.0", features = ["rt-tokio"] }
flate2 = { version = "1.0.33", default-features = false, features = ["zlib"] }
tar = { version = "0.4.41", default-features = false }
tokio = { version = "1", features = ["full"] }
