[package]
name = "release_commands"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
libcnb = "=0.25.0"
libherokubuildpack = { version = "=0.22.0", default-features = false, features = ["toml"] }
serde = "1"
toml = { version = "0.8", features = ["preserve_order"] }
